--- a/index.html
+++ b/index.html
@@ -328,7 +328,9 @@ kbd {
 
 <body>
 
-<h1 id="toc_0">Timothy Sweetser</h1>
+<h1 id="toc_0">Timothy D. Sweetser</h1>
+
+<h4 id="toc_1">Full-stack data scientist in San Francisco</h4>
 
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
@@ -337,11 +339,74 @@ kbd {
 <li>(508) 450-1915</li>
 </ul>
 
-<h2 id="toc_1">Work Experience</h2>
+<h2 id="toc_2">Experience</h2>
 
-<h2 id="toc_2">Education</h2>
+<h4 id="toc_3">Stitch Fix, San Francisco, CA</h4>
 
-<h2 id="toc_3">Skills</h2>
+<ul>
+<li>Develop personalized recommender systems for women’s clothing</li>
+<li>Research new features, evaluate them in backtesting, run A/B tests, and try to beat the incumbent algorithm</li>
+<li>Increased revenue by $8 million per year by quantifying style</li>
+<li>Develop end-to-end data science pipelines in R and Python using AWS, Docker, and Jenkins</li>
+<li>Improve software engineering skills by using logging, click, handling errors, and writing tests</li>
+</ul>
+
+<h4 id="toc_4">Coffee Meets Bagel, San Francisco, CA</h4>
+
+<p>January 2015 - June 2015</p>
+
+<ul>
+<li>Create new matching algorithm using Python’s scikit-learn</li>
+<li>Result in 10% higher LIKE rates for men and women</li>
+<li>Come up with new and interesting ideas about dating, test them using data, and write engaging blog posts about them. Examples:
+
+<ul>
+<li><a href="https://coffeemeetsbagel.com/blog/index.php/dating-statistics/raining-men/">It&#39;s raining men</a></li>
+<li><a href="https://coffeemeetsbagel.com/blog/index.php/dating-statistics/how-tall-are-you-really/">How tall are you <em>really</em>?</a></li>
+</ul></li>
+</ul>
+
+<h4 id="toc_5">CSAA Insurance Group, Walnut Creek, CA</h4>
+
+<p>June 2012 - December 2014</p>
+
+<ul>
+<li>Use machine learning to improve customer satisfaction with claims for a major consumer insurance company</li>
+<li>Merge multiple datasets, train supervised learning models, develop data pipeline, and drive implementation by over 1,000 employees</li>
+<li>Result in 6-point increase in Net Promoter Score</li>
+<li>Use R for ad hoc analysis, such as, how does filing a claim impact customer retention?</li>
+</ul>
+
+<h2 id="toc_6">Education</h2>
+
+<ul>
+<li>M.S. Statistics, <strong>Stanford University</strong>, 2015</li>
+<li>B.A. Mathematics, Clark University</li>
+<li>Fellow of the Casualty Actuarial Society</li>
+</ul>
+
+<h2 id="toc_7">Programming Skills</h2>
+
+<ul>
+<li>Advanced R and Python</li>
+<li>Intermediate SQL</li>
+<li>Basic Spark and Hive</li>
+<li>Can write unit tests</li>
+<li>Some experience with ML packages Caffe, Vowpal Wabbit</li>
+</ul>
+
+<h2 id="toc_8">Projects</h2>
+
+<ul>
+<li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python (forthcoming)</li>
+<li>Analysis of BART Fares
+
+<ul>
+<li><a href="https://github.com/hacktuarial/BART">github</a> </li>
+<li><a href="https://bart-fares.herokuapp.com/">heroku</a></li>
+</ul></li>
+<li>Wrote parallel implementation of <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
+</ul>
 
 
 
