--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@ kbd {
 <ul>
 <li>Advanced R and Python</li>
 <li>Intermediate SQL</li>
+<li>Proficient with git, docker, and bash</li>
 <li>Basic Spark and Hive</li>
 <li>Can write unit tests</li>
 <li>Some experience with ML packages Caffe, Vowpal Wabbit</li>
