--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@ kbd {
 <li>Research new features, evaluate them in backtesting, run A/B tests, and try to beat the incumbent algorithm</li>
 <li>Increased revenue by $8 million per year by quantifying style</li>
 <li>Develop end-to-end data science pipelines in R and Python using AWS, Docker, and Jenkins</li>
+<li>Use causal inference to analyze effects of complex experiments</li>
 <li>Improve software engineering skills by using logging, click, handling errors, and writing tests</li>
 </ul>
 
@@ -390,7 +391,7 @@ kbd {
 <ul>
 <li>Advanced R and Python</li>
 <li>Intermediate SQL</li>
-<li>Proficient with git, docker, and bash</li>
+<li>Proficient with git, docker, Vim, and bash</li>
 <li>Basic Spark and Hive</li>
 <li>Can write unit tests</li>
 <li>Some experience with ML packages Caffe, Vowpal Wabbit</li>
