add dates of SF

--- a/index.html
+++ b/index.html
@@ -343,12 +343,14 @@ kbd {
 
 <h4 id="toc_3">Stitch Fix, San Francisco, CA</h4>
 
+<p>July 2015 - Present</p>
+
 <ul>
 <li>Develop personalized recommender systems for women’s clothing</li>
-<li>Research new features, evaluate them in backtesting, run A/B tests, and try to beat the incumbent algorithm</li>
+<li>Research new features, evaluate them offline, run A/B tests, and try to beat the incumbent algorithm</li>
 <li>Increased revenue by $8 million per year by quantifying style</li>
 <li>Develop end-to-end data science pipelines in R and Python using AWS, Docker, and Jenkins</li>
-<li>Use causal inference to analyze effects of complex experiments</li>
+<li>Use causal inference to determine effects of complex experiments</li>
 <li>Improve software engineering skills by using logging, click, handling errors, and writing tests</li>
 </ul>
 
@@ -382,7 +384,7 @@ kbd {
 
 <ul>
 <li>M.S. Statistics, <strong>Stanford University</strong>, 2015</li>
-<li>B.A. Mathematics, Clark University</li>
+<li>B.A. Mathematics, Clark University, Worcester, MA</li>
 <li>Fellow of the Casualty Actuarial Society</li>
 </ul>
 
@@ -391,9 +393,9 @@ kbd {
 <ul>
 <li>Advanced R and Python</li>
 <li>Intermediate SQL</li>
-<li>Proficient with git, docker, Vim, and bash</li>
+<li>Proficient with git, docker, aws, vim, and bash</li>
 <li>Basic Spark and Hive</li>
-<li>Can write unit tests</li>
+<li>Unit tests</li>
 <li>Some experience with ML packages Caffe, Vowpal Wabbit</li>
 </ul>
 
