--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@ kbd {
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing</li>
+<li>Use contextual bandits to optimize where and when to show different recommendations</li>
 <li>Research new features, evaluate them offline, run A/B tests, and try to beat the incumbent algorithm</li>
 <li>Increased revenue by $8 million per year by quantifying style</li>
 <li>Develop end-to-end data science pipelines in R and Python using AWS, Docker, and Jenkins</li>
@@ -396,13 +397,12 @@ kbd {
 <li>Proficient with git, docker, aws, vim, and bash</li>
 <li>Basic Spark and Hive</li>
 <li>Unit tests</li>
-<li>Some experience with ML packages Caffe, Vowpal Wabbit</li>
 </ul>
 
 <h2 id="toc_8">Projects</h2>
 
 <ul>
-<li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python (forthcoming)</li>
+<li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python</li>
 <li>Analysis of BART Fares
 
 <ul>
@@ -412,7 +412,32 @@ kbd {
 <li>Wrote parallel implementation of <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
 </ul>
 
+<h2 id="toc_9">Talks</h2>
 
+<ul>
+<li><a href="https://pydata.org/nyc2017/schedule/presentation/63/">PyData NYC</a>, November 2017</li>
+</ul>
+
+
+
+<script type="text/x-mathjax-config">
+(function () {
+
+MathJax.Hub.Config({
+	'showProcessingMessages': false,
+	'messageStyle': 'none'
+});
+
+if (typeof MathJaxListener !== 'undefined') {
+	MathJax.Hub.Register.StartupHook('End', function () {
+		MathJaxListener.invokeCallbackForKey_('End');
+	});
+}
+
+})();
+</script>
+
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
 </body>
