adds link to PyData talk

--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@ kbd {
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing</li>
-<li>Use contextual bandits to optimize where and when to show different recommendations</li>
+<li>Use Bayesian contextual bandits to optimize where and when to show different recommendations</li>
 <li>Research new features, evaluate them offline, run A/B tests, and try to beat the incumbent algorithm</li>
 <li>Increased revenue by $8 million per year by quantifying style</li>
-<li>Develop end-to-end data science pipelines in R and Python using AWS, Docker, and Jenkins</li>
+<li>Develop end-to-end data science pipelines in SQL, R and Python using AWS, Docker, and Jenkins</li>
 <li>Use causal inference to determine effects of complex experiments</li>
-<li>Improve software engineering skills by using logging, click, handling errors, and writing tests</li>
+<li>Improve software engineering skills by using logging, click, handling errors, managing deployments, and writing tests</li>
 </ul>
 
 <h4 id="toc_4">Coffee Meets Bagel, San Francisco, CA</h4>
@@ -396,7 +396,6 @@ kbd {
 <li>Intermediate SQL</li>
 <li>Proficient with git, docker, aws, vim, and bash</li>
 <li>Basic Spark and Hive</li>
-<li>Unit tests</li>
 </ul>
 
 <h2 id="toc_8">Projects</h2>
@@ -415,7 +414,12 @@ kbd {
 <h2 id="toc_9">Talks</h2>
 
 <ul>
-<li><a href="https://pydata.org/nyc2017/schedule/presentation/63/">PyData NYC</a>, November 2017</li>
+<li>&quot;Diamond: Mixed Effects Models in Python&quot;, PyData NYC, November 2017
+
+<ul>
+<li><a href="https://www.youtube.com/watch?v=jrprjZEX9gU">video</a></li>
+<li><a href="https://www.slideshare.net/PyData/diamond-mixed-effects-models-in-python">slides</a></li>
+</ul></li>
 </ul>
 
 
