--- a/index.html
+++ b/index.html
@@ -347,12 +347,13 @@ kbd {
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing</li>
+<li>Improve resiliency and stability of production machine learning systems with Python scikit-learn pipelines</li>
 <li>Use contextual bandits to optimize where and when to show different recommendations</li>
-<li>Research new features, evaluate them offline, run A/B tests, and try to beat the incumbent algorithm</li>
+<li>Research new features/models, evaluate them offline, and design and run A/B tests to increase revenue and client satisfaction</li>
 <li>Increased revenue by $8 million per year by quantifying style</li>
-<li>Develop end-to-end data science pipelines in R and Python using AWS, Docker, and Jenkins</li>
+<li>Develop end-to-end data science pipelines in Spark, Python and R using AWS, Docker, and Jenkins</li>
 <li>Use causal inference to determine effects of complex experiments</li>
-<li>Improve software engineering skills by using logging, click, handling errors, and writing tests</li>
+<li>Improve software engineering skills by using logging, command line interfaces, handling errors, and writing tests</li>
 </ul>
 
 <h4 id="toc_4">Coffee Meets Bagel, San Francisco, CA</h4>
@@ -360,7 +361,7 @@ kbd {
 <p>January 2015 - June 2015</p>
 
 <ul>
-<li>Create new matching algorithm using Python’s scikit-learn</li>
+<li>Create new matching algorithm using Python scikit-learn</li>
 <li>Result in 10% higher LIKE rates for men and women</li>
 <li>Come up with new and interesting ideas about dating, test them using data, and write engaging blog posts about them. Examples:
 
@@ -396,7 +397,6 @@ kbd {
 <li>Intermediate SQL</li>
 <li>Proficient with git, docker, aws, vim, and bash</li>
 <li>Basic Spark and Hive</li>
-<li>Unit tests</li>
 </ul>
 
 <h2 id="toc_8">Projects</h2>
@@ -437,7 +437,7 @@ if (typeof MathJaxListener !== 'undefined') {
 })();
 </script>
 
-<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
 </body>
