--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ kbd {
 
 <h1 id="toc_0">Timothy D. Sweetser</h1>
 
-<h4 id="toc_1">Full-stack data scientist in San Francisco</h4>
+<h4 id="toc_1">Full-stack data scientist in New York</h4>
 
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
@@ -341,9 +341,17 @@ kbd {
 
 <h2 id="toc_2">Experience</h2>
 
-<h4 id="toc_3">Stitch Fix, San Francisco, CA</h4>
+<h4 id="toc_3">Rent the Runway, New York, NY</h4>
 
-<p>July 2015 - Present</p>
+<p>August 2018 - Present</p>
+
+<ul>
+<li>Personalization</li>
+</ul>
+
+<h4 id="toc_4">Stitch Fix, San Francisco, CA</h4>
+
+<p>July 2015 - June 2018</p>
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing and implement them in production</li>
@@ -355,7 +363,7 @@ kbd {
 <li>Improve software engineering skills by using logging, click, handling errors, managing deployments, and writing tests</li>
 </ul>
 
-<h4 id="toc_4">Coffee Meets Bagel, San Francisco, CA</h4>
+<h4 id="toc_5">Coffee Meets Bagel, San Francisco, CA</h4>
 
 <p>January 2015 - June 2015</p>
 
@@ -370,7 +378,7 @@ kbd {
 </ul></li>
 </ul>
 
-<h4 id="toc_5">CSAA Insurance Group, Walnut Creek, CA</h4>
+<h4 id="toc_6">CSAA Insurance Group, Walnut Creek, CA</h4>
 
 <p>June 2012 - December 2014</p>
 
@@ -381,7 +389,7 @@ kbd {
 <li>Use R for ad hoc analysis, such as, how does filing a claim impact customer retention?</li>
 </ul>
 
-<h2 id="toc_6">Education</h2>
+<h2 id="toc_7">Education</h2>
 
 <ul>
 <li>M.S. Statistics, <strong>Stanford University</strong>, 2015</li>
@@ -389,7 +397,7 @@ kbd {
 <li>Fellow of the Casualty Actuarial Society</li>
 </ul>
 
-<h2 id="toc_7">Programming Skills</h2>
+<h2 id="toc_8">Programming Skills</h2>
 
 <ul>
 <li>Advanced R (tidyverse, data.table, ggplot2)</li>
@@ -399,20 +407,21 @@ kbd {
 <li>Basic Spark and Hive</li>
 </ul>
 
-<h2 id="toc_8">Projects</h2>
+<h2 id="toc_9">Projects and open-source contributions</h2>
 
 <ul>
-<li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python</li>
+<li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python.</li>
+<li>Contributor to <a href="https://github.com/scikit-learn-contrib/sklearn-pandas">sklearn-pandas</a>, a Python package for using sckit-learn with pandas DataFrames</li>
 <li>Analysis of BART Fares
 
 <ul>
 <li><a href="https://github.com/hacktuarial/BART">github</a> </li>
 <li><a href="https://bart-fares.herokuapp.com/">heroku</a></li>
 </ul></li>
-<li>Wrote parallel implementation of <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
+<li>Wrote parallel implementation of R <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
 </ul>
 
-<h2 id="toc_9">Talks</h2>
+<h2 id="toc_10">Talks</h2>
 
 <ul>
 <li>&quot;Diamond: Mixed Effects Models in Python&quot;, PyData NYC, November 2017
