adds RTR projects

--- a/index.html
+++ b/index.html
@@ -346,7 +346,9 @@ kbd {
 <p>August 2018 - Present</p>
 
 <ul>
-<li>Personalization</li>
+<li>Develop new algorithms to drive user engagement, e.g. Trending in Your Area</li>
+<li>Improve user fit using machine learning</li>
+<li>Develop a swap recommender system using matrix factorization in PyTorch</li>
 </ul>
 
 <h4 id="toc_4">Stitch Fix, San Francisco, CA</h4>
@@ -404,7 +406,7 @@ kbd {
 <li>Advanced Python (numpy, scipy, pandas, scikit-learn)</li>
 <li>Intermediate SQL</li>
 <li>Proficient with git, docker, aws, vim, and bash</li>
-<li>Basic Spark and Hive</li>
+<li>Basic Spark, Hive and Snowflake</li>
 </ul>
 
 <h2 id="toc_9">Projects and open-source contributions</h2>
