update RTR experience

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ kbd {
 
 <h1 id="toc_0">Timothy D. Sweetser</h1>
 
-<h4 id="toc_1">Full-stack data scientist in New York</h4>
+<h4 id="toc_1">Full-stack data scientist in New York City</h4>
 
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
@@ -346,9 +346,10 @@ kbd {
 <p>August 2018 - Present</p>
 
 <ul>
-<li>Develop new algorithms to drive user engagement, e.g. Trending in Your Area</li>
-<li>Improve user fit using machine learning</li>
-<li>Develop a swap recommender system using matrix factorization in PyTorch</li>
+<li>Develop fit algorithm to boost rental wear rate by +0.01</li>
+<li>Increase user engagement by improving personalized recommendations</li>
+<li>Rewrite production recommendation service using an asynchronous Python framework</li>
+<li>Port batch model training from laptops to Jenkins</li>
 </ul>
 
 <h4 id="toc_4">Stitch Fix, San Francisco, CA</h4>
@@ -357,12 +358,11 @@ kbd {
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing and implement them in production</li>
-<li>Improve resiliency and stability of production machine learning systems with Python scikit-learn pipelines</li>
+<li>Increased revenue by $8+ million per year by quantifying style</li>
 <li>Use contextual bandits to optimize where and when to show different recommendations</li>
 <li>Research new features/models, evaluate them offline, and design and run A/B tests to increase revenue and client satisfaction</li>
-<li>Increased revenue by $8 million per year by quantifying style</li>
 <li>Develop end-to-end data science pipelines in Spark, Python and R using AWS, Docker, and Jenkins</li>
-<li>Improve software engineering skills by using logging, click, handling errors, managing deployments, and writing tests</li>
+<li>Leverage software engineering best practices by using logging, click, handling errors, managing deployments, and writing tests</li>
 </ul>
 
 <h4 id="toc_5">Coffee Meets Bagel, San Francisco, CA</h4>
@@ -403,10 +403,10 @@ kbd {
 
 <ul>
 <li>Advanced R (tidyverse, data.table, ggplot2)</li>
-<li>Advanced Python (numpy, scipy, pandas, scikit-learn)</li>
+<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio)</li>
 <li>Intermediate SQL</li>
-<li>Proficient with git, docker, aws, vim, and bash</li>
-<li>Basic Spark, Hive and Snowflake</li>
+<li>Proficient with git, docker, AWS, and bash</li>
+<li>Basic PySpark, Hive and Snowflake</li>
 </ul>
 
 <h2 id="toc_9">Projects and open-source contributions</h2>
@@ -417,7 +417,7 @@ kbd {
 <li>Analysis of BART Fares
 
 <ul>
-<li><a href="https://github.com/hacktuarial/BART">github</a> </li>
+<li><a href="https://github.com/hacktuarial/BART">github</a></li>
 <li><a href="https://bart-fares.herokuapp.com/">heroku</a></li>
 </ul></li>
 <li>Wrote parallel implementation of R <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
