--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ kbd {
 
 <h1 id="toc_0">Timothy D. Sweetser</h1>
 
-<h4 id="toc_1">Full-stack data scientist in New York City</h4>
+<h4 id="toc_1">Machine Learning Engineer in New York City</h4>
 
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
@@ -341,9 +341,20 @@ kbd {
 
 <h2 id="toc_2">Experience</h2>
 
-<h4 id="toc_3">Rent the Runway, New York, NY</h4>
+<h4 id="toc_3">FINDMINE, New York, NY</h4>
 
-<p>August 2018 - Present</p>
+<p>May 2019 - Present</p>
+
+<ul>
+<li>Automate color extraction for new products using <code>sckit-image</code></li>
+<li>Use deep learning to identify similar styles based on images</li>
+<li>Write a Flask App to collect quantitative fashion ratings from subject matter experts</li>
+<li>Set standards for methodology and analysis in A/B testing</li>
+</ul>
+
+<h4 id="toc_4">Rent the Runway, New York, NY</h4>
+
+<p>August 2018 - April 2019</p>
 
 <ul>
 <li>Develop fit algorithm to boost rental wear rate by +0.01</li>
@@ -352,7 +363,7 @@ kbd {
 <li>Port batch model training from laptops to Jenkins</li>
 </ul>
 
-<h4 id="toc_4">Stitch Fix, San Francisco, CA</h4>
+<h4 id="toc_5">Stitch Fix, San Francisco, CA</h4>
 
 <p>July 2015 - June 2018</p>
 
@@ -365,12 +376,12 @@ kbd {
 <li>Leverage software engineering best practices by using logging, click, handling errors, managing deployments, and writing tests</li>
 </ul>
 
-<h4 id="toc_5">Coffee Meets Bagel, San Francisco, CA</h4>
+<h4 id="toc_6">Coffee Meets Bagel, San Francisco, CA</h4>
 
 <p>January 2015 - June 2015</p>
 
 <ul>
-<li>Create new matching algorithm using Python scikit-learn</li>
+<li>Create new matching algorithm using Python and <code>scikit-learn</code></li>
 <li>Result in 10% higher LIKE rates for men and women</li>
 <li>Come up with new and interesting ideas about dating, test them using data, and write engaging blog posts about them. Examples:
 
@@ -380,32 +391,20 @@ kbd {
 </ul></li>
 </ul>
 
-<h4 id="toc_6">CSAA Insurance Group, Walnut Creek, CA</h4>
-
-<p>June 2012 - December 2014</p>
-
-<ul>
-<li>Use machine learning to improve customer satisfaction with claims for a major consumer insurance company</li>
-<li>Merge multiple datasets, train supervised learning models, develop data pipeline, and drive implementation by over 1,000 employees</li>
-<li>Result in 6-point increase in Net Promoter Score</li>
-<li>Use R for ad hoc analysis, such as, how does filing a claim impact customer retention?</li>
-</ul>
-
 <h2 id="toc_7">Education</h2>
 
 <ul>
 <li>M.S. Statistics, <strong>Stanford University</strong>, 2015</li>
 <li>B.A. Mathematics, Clark University, Worcester, MA</li>
-<li>Fellow of the Casualty Actuarial Society</li>
 </ul>
 
 <h2 id="toc_8">Programming Skills</h2>
 
 <ul>
+<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow)</li>
 <li>Advanced R (tidyverse, data.table, ggplot2)</li>
-<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio)</li>
 <li>Intermediate SQL</li>
-<li>Proficient with git, docker, AWS, and bash</li>
+<li>Proficient with git, docker, AWS, GCP, and bash</li>
 <li>Basic PySpark, Hive and Snowflake</li>
 </ul>
 
@@ -414,12 +413,7 @@ kbd {
 <ul>
 <li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python.</li>
 <li>Contributor to <a href="https://github.com/scikit-learn-contrib/sklearn-pandas">sklearn-pandas</a>, a Python package for using sckit-learn with pandas DataFrames</li>
-<li>Analysis of BART Fares
-
-<ul>
-<li><a href="https://github.com/hacktuarial/BART">github</a></li>
-<li><a href="https://bart-fares.herokuapp.com/">heroku</a></li>
-</ul></li>
+<li>Fix reproducibility bug for <a href="https://github.com/scikit-image/scikit-image/pull/4251">scikit-image</a></li>
 <li>Wrote parallel implementation of R <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
 </ul>
 
