--- a/index.html
+++ b/index.html
@@ -341,13 +341,14 @@ kbd {
 
 <h2 id="toc_2">Experience</h2>
 
-<h4 id="toc_3">FINDMINE, New York, NY</h4>
+<h4 id="toc_3">FindMine, New York, NY</h4>
 
 <p>May 2019 - Present</p>
 
 <ul>
-<li>Automate color extraction for new products using <code>sckit-image</code></li>
+<li>Automate color extraction for new products using <code>scikit-image</code></li>
 <li>Use deep learning to identify similar styles based on images</li>
+<li>Use K-Medoids, Earth Movers Distance, and Pointwise Mutual Information to make outfit recommendations</li>
 <li>Write a Flask App to collect quantitative fashion ratings from subject matter experts</li>
 <li>Set standards for methodology and analysis in A/B testing</li>
 </ul>
@@ -359,7 +360,7 @@ kbd {
 <ul>
 <li>Develop fit algorithm to boost rental wear rate by +0.01</li>
 <li>Increase user engagement by improving personalized recommendations</li>
-<li>Rewrite production recommendation service using an asynchronous Python framework</li>
+<li>Rewrite production recommendation service using an asynchronous Python web framework</li>
 <li>Port batch model training from laptops to Jenkins</li>
 </ul>
 
@@ -402,8 +403,9 @@ kbd {
 
 <ul>
 <li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow)</li>
-<li>Advanced R (tidyverse, data.table, ggplot2)</li>
+<li>Intermediate R (tidyverse, data.table, ggplot2)</li>
 <li>Intermediate SQL</li>
+<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a></li>
 <li>Proficient with git, docker, AWS, GCP, and bash</li>
 <li>Basic PySpark, Hive and Snowflake</li>
 </ul>
@@ -414,7 +416,6 @@ kbd {
 <li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python.</li>
 <li>Contributor to <a href="https://github.com/scikit-learn-contrib/sklearn-pandas">sklearn-pandas</a>, a Python package for using sckit-learn with pandas DataFrames</li>
 <li>Fix reproducibility bug for <a href="https://github.com/scikit-image/scikit-image/pull/4251">scikit-image</a></li>
-<li>Wrote parallel implementation of R <a href="https://github.com/patperry/r-mbest">mbest package</a> on CRAN</li>
 </ul>
 
 <h2 id="toc_10">Talks</h2>
@@ -447,7 +448,7 @@ if (typeof MathJaxListener !== 'undefined') {
 })();
 </script>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 
 </body>
