update html too

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ kbd {
 <p>May 2019 - Present</p>
 
 <ul>
-<li>Automate color extraction for new products using <code>scikit-image</code></li>
+<li>Increase click through rate using \(\epsilon\)-greedy bandit</li>
 <li>Use deep learning to identify similar styles based on images</li>
 <li>Use K-Medoids, Earth Movers Distance, and Pointwise Mutual Information to make outfit recommendations</li>
 <li>Write a Flask App to collect quantitative fashion ratings from subject matter experts</li>
