--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ kbd {
 <p>May 2019 - Present</p>
 
 <ul>
-<li>Increase click through rate using \(\epsilon\)-greedy bandit</li>
+<li>Increase click through rate by 3% using \(\epsilon\)-greedy bandit</li>
 <li>Use deep learning to identify similar styles based on images</li>
 <li>Use K-Medoids, Earth Movers Distance, and Pointwise Mutual Information to make outfit recommendations</li>
 <li>Write a Flask App to collect quantitative fashion ratings from subject matter experts</li>
@@ -402,12 +402,12 @@ kbd {
 <h2 id="toc_8">Programming Skills</h2>
 
 <ul>
-<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow)</li>
+<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow, keras)</li>
 <li>Intermediate R (tidyverse, data.table, ggplot2)</li>
 <li>Intermediate SQL</li>
 <li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a></li>
 <li>Proficient with git, docker, AWS, GCP, and bash</li>
-<li>Basic PySpark, Hive and Snowflake</li>
+<li>Basic PySpark, Hive, BigQuery, and Snowflake</li>
 </ul>
 
 <h2 id="toc_9">Projects and open-source contributions</h2>
