update html too

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Timothy Sweetser</title>
+<title>resume</title>
 
 
 <style type="text/css">
@@ -347,9 +347,8 @@ kbd {
 
 <ul>
 <li>Increase click through rate by 3% using \(\epsilon\)-greedy bandit</li>
-<li>Use deep learning to identify similar styles based on images</li>
-<li>Use K-Medoids, Earth Movers Distance, and Pointwise Mutual Information to make outfit recommendations</li>
-<li>Write a Flask App to collect quantitative fashion ratings from subject matter experts</li>
+<li>Use deep learning to identify similar products based on images</li>
+<li>Write a Flask app to collect quantitative fashion ratings from subject matter experts</li>
 <li>Set standards for methodology and analysis in A/B testing</li>
 </ul>
 
@@ -360,8 +359,8 @@ kbd {
 <ul>
 <li>Develop fit algorithm to boost rental wear rate by +0.01</li>
 <li>Increase user engagement by improving personalized recommendations</li>
-<li>Rewrite production recommendation service using an asynchronous Python web framework</li>
-<li>Port batch model training from laptops to Jenkins</li>
+<li>Rewrite production recommendation service using <code>asyncio</code>, an asynchronous Python web framework</li>
+<li>Migrate batch model training from laptops to Jenkins</li>
 </ul>
 
 <h4 id="toc_5">Stitch Fix, San Francisco, CA</h4>
@@ -374,7 +373,6 @@ kbd {
 <li>Use contextual bandits to optimize where and when to show different recommendations</li>
 <li>Research new features/models, evaluate them offline, and design and run A/B tests to increase revenue and client satisfaction</li>
 <li>Develop end-to-end data science pipelines in Spark, Python and R using AWS, Docker, and Jenkins</li>
-<li>Leverage software engineering best practices by using logging, click, handling errors, managing deployments, and writing tests</li>
 </ul>
 
 <h4 id="toc_6">Coffee Meets Bagel, San Francisco, CA</h4>
