--- a/index.html
+++ b/index.html
@@ -343,18 +343,18 @@ kbd {
 
 <h4 id="toc_3">FindMine, New York, NY</h4>
 
-<p>May 2019 - Present</p>
+<p>Machine Learning Engineer, May 2019 - Present</p>
 
 <ul>
-<li>Increase click through rate by 3% using \(\epsilon\)-greedy bandit</li>
+<li>Increase click through rate by 3% using multi-armed bandit</li>
 <li>Use deep learning to identify similar products based on images</li>
-<li>Write a Flask app to collect quantitative fashion ratings from subject matter experts</li>
 <li>Set standards for methodology and analysis in A/B testing</li>
+<li>Write a Flask app to collect quantitative fashion ratings from subject matter experts</li>
 </ul>
 
 <h4 id="toc_4">Rent the Runway, New York, NY</h4>
 
-<p>August 2018 - April 2019</p>
+<p>Data Scientist, August 2018 - April 2019</p>
 
 <ul>
 <li>Develop fit algorithm to boost rental wear rate by +0.01</li>
@@ -365,19 +365,18 @@ kbd {
 
 <h4 id="toc_5">Stitch Fix, San Francisco, CA</h4>
 
-<p>July 2015 - June 2018</p>
+<p>Data Scientist, July 2015 - June 2018</p>
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing and implement them in production</li>
 <li>Increased revenue by $8+ million per year by quantifying style</li>
 <li>Use contextual bandits to optimize where and when to show different recommendations</li>
-<li>Research new features/models, evaluate them offline, and design and run A/B tests to increase revenue and client satisfaction</li>
 <li>Develop end-to-end data science pipelines in Spark, Python and R using AWS, Docker, and Jenkins</li>
 </ul>
 
 <h4 id="toc_6">Coffee Meets Bagel, San Francisco, CA</h4>
 
-<p>January 2015 - June 2015</p>
+<p>Intern, January 2015 - June 2015</p>
 
 <ul>
 <li>Create new matching algorithm using Python and <code>scikit-learn</code></li>
