--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>resume</title>
+<title>Timothy Sweetser, Machine Learning Engineer</title>
 
 
 <style type="text/css">
