adds savings from EMD project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Timothy Sweetser, Machine Learning Engineer</title>
+<title>resume</title>
 
 
 <style type="text/css">
@@ -349,6 +349,7 @@ kbd {
 <li>Increase click through rate by 3% using multi-armed bandit</li>
 <li>Use deep learning to identify similar products based on images</li>
 <li>Set standards for methodology and analysis in A/B testing</li>
+<li>Save $60K/year in cloud computing costs by shifting computation from database to Python layer</li>
 <li>Write a Flask app to collect quantitative fashion ratings from subject matter experts</li>
 </ul>
 
