adds hbo, job titles

--- a/index.html
+++ b/index.html
@@ -330,6 +330,8 @@ kbd {
 
 <h1 id="toc_0">Timothy D. Sweetser</h1>
 
+<p><img src="images/selfie.jpg" alt="selfie" width=100 height=100></p>
+
 <h4 id="toc_1">Machine Learning Engineer in New York City</h4>
 
 <ul>
@@ -341,32 +343,40 @@ kbd {
 
 <h2 id="toc_2">Experience</h2>
 
-<h4 id="toc_3">FindMine, New York, NY</h4>
+<h4 id="toc_3">HBO Max, New York, NY</h4>
 
-<p>May 2019 - Present</p>
+<p>Senior Machine Learning Engineer. November 2020 - Present</p>
+
+<ul>
+<li>Recommender systems and personalization for HBO Max</li>
+</ul>
+
+<h4 id="toc_4">FindMine, New York, NY</h4>
+
+<p>Machine Learning Engineer. May 2019 - November 2020</p>
 
 <ul>
 <li>Increase click through rate by 3% using \(\epsilon\)-greedy bandit</li>
 <li>Use deep learning to identify similar styles based on images</li>
-<li>Use K-Medoids, Earth Movers Distance, and Pointwise Mutual Information to make outfit recommendations</li>
-<li>Write a Flask App to collect quantitative fashion ratings from subject matter experts</li>
+<li>Reduce costs by $50,000/year by automatically replacing out of stock items in expert-curated fashion outfits</li>
+<li>Write a Flask app to collect quantitative fashion ratings from subject matter experts</li>
 <li>Set standards for methodology and analysis in A/B testing</li>
 </ul>
 
-<h4 id="toc_4">Rent the Runway, New York, NY</h4>
+<h4 id="toc_5">Rent the Runway, New York, NY</h4>
 
-<p>August 2018 - April 2019</p>
+<p>Data Scientist. August 2018 - April 2019</p>
 
 <ul>
 <li>Develop fit algorithm to boost rental wear rate by +0.01</li>
 <li>Increase user engagement by improving personalized recommendations</li>
 <li>Rewrite production recommendation service using an asynchronous Python web framework</li>
-<li>Port batch model training from laptops to Jenkins</li>
+<li>Migrate batch model training from laptops to Jenkins</li>
 </ul>
 
-<h4 id="toc_5">Stitch Fix, San Francisco, CA</h4>
+<h4 id="toc_6">Stitch Fix, San Francisco, CA</h4>
 
-<p>July 2015 - June 2018</p>
+<p>Data Scientist. July 2015 - June 2018</p>
 
 <ul>
 <li>Develop personalized recommender systems for women’s clothing and implement them in production</li>
@@ -377,7 +387,7 @@ kbd {
 <li>Leverage software engineering best practices by using logging, click, handling errors, managing deployments, and writing tests</li>
 </ul>
 
-<h4 id="toc_6">Coffee Meets Bagel, San Francisco, CA</h4>
+<h4 id="toc_7">Coffee Meets Bagel, San Francisco, CA</h4>
 
 <p>January 2015 - June 2015</p>
 
@@ -392,25 +402,25 @@ kbd {
 </ul></li>
 </ul>
 
-<h2 id="toc_7">Education</h2>
+<h2 id="toc_8">Education</h2>
 
 <ul>
 <li>M.S. Statistics, <strong>Stanford University</strong>, 2015</li>
 <li>B.A. Mathematics, Clark University, Worcester, MA</li>
 </ul>
 
-<h2 id="toc_8">Programming Skills</h2>
+<h2 id="toc_9">Programming Skills</h2>
 
 <ul>
 <li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow, keras)</li>
 <li>Intermediate R (tidyverse, data.table, ggplot2)</li>
 <li>Intermediate SQL</li>
-<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a></li>
+<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a> and Java</li>
 <li>Proficient with git, docker, AWS, GCP, and bash</li>
 <li>Basic PySpark, Hive, BigQuery, and Snowflake</li>
 </ul>
 
-<h2 id="toc_9">Projects and open-source contributions</h2>
+<h2 id="toc_10">Projects and open-source contributions</h2>
 
 <ul>
 <li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python.</li>
@@ -418,7 +428,7 @@ kbd {
 <li>Fix reproducibility bug for <a href="https://github.com/scikit-image/scikit-image/pull/4251">scikit-image</a></li>
 </ul>
 
-<h2 id="toc_10">Talks</h2>
+<h2 id="toc_11">Talks</h2>
 
 <ul>
 <li>&quot;Diamond: Mixed Effects Models in Python&quot;, PyData NYC, November 2017
