--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ kbd {
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
 <li><a href="https://github.com/hacktuarial">Github</a></li>
-<li>tsweetser@gmail.com</li>
+<li><a href="mailto:tsweetser@gmail.com">tsweetser@gmail.com</a></li>
 <li>(508) 450-1915</li>
 </ul>
 
@@ -403,14 +403,6 @@ kbd {
 <li>Basic PySpark, Hive, BigQuery, and Snowflake</li>
 </ul>
 
-<h2 id="toc_10">Projects and open-source contributions</h2>
-
-<ul>
-<li><a href="https://github.com/stitchfix/diamond">Diamond</a>, a very fast iterative solver for mixed-effects models in Python.</li>
-<li>Contributor to <a href="https://github.com/scikit-learn-contrib/sklearn-pandas">sklearn-pandas</a>, a Python package for using sckit-learn with pandas DataFrames</li>
-<li>Fix reproducibility bug for <a href="https://github.com/scikit-image/scikit-image/pull/4251">scikit-image</a></li>
-</ul>
-
 <h2 id="toc_11">Talks</h2>
 
 <ul>
@@ -419,6 +411,7 @@ kbd {
 <ul>
 <li><a href="https://www.youtube.com/watch?v=jrprjZEX9gU">video</a></li>
 <li><a href="https://www.slideshare.net/PyData/diamond-mixed-effects-models-in-python">slides</a></li>
+<li><a href="https://github.com/stitchfix/diamond">code</a></li>
 </ul></li>
 </ul>
 
