--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ kbd {
 
 <ul>
 <li>Recommender systems and personalization for HBO Max</li>
+<li>Airflow, A/B Testing, algorithm innovation</li>
 </ul>
 
 <h4 id="toc_4">FindMine, New York, NY</h4>
@@ -395,12 +396,10 @@ kbd {
 <h2 id="toc_9">Programming Skills</h2>
 
 <ul>
-<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow, keras)</li>
-<li>Intermediate R (tidyverse, data.table, ggplot2)</li>
+<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow, keras, Airflow, PySpark)</li>
 <li>Intermediate SQL</li>
 <li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a> and Java</li>
-<li>Proficient with git, docker, AWS, GCP, and bash</li>
-<li>Basic PySpark, Hive, BigQuery, and Snowflake</li>
+<li>Proficient with git, docker, AWS (Sagemaker, EMR), GCP, and bash</li>
 </ul>
 
 <h2 id="toc_11">Talks</h2>
