--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ kbd {
 
 <ul>
 <li>Recommender systems and personalization for HBO Max</li>
+<li>Increase CTR of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a></li>
 <li>Airflow, A/B Testing, algorithm innovation</li>
 </ul>
 
