--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@ kbd {
 
 <ul>
 <li>Recommender systems and personalization for HBO Max</li>
-<li>Increase CTR of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a></li>
-<li>Airflow, A/B Testing, algorithm innovation</li>
+<li>Increase user engagement of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a></li>
+<li>Apache Airflow, A/B Testing, algorithm innovation</li>
 </ul>
 
 <h4 id="toc_4">FindMine, New York, NY</h4>
