--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@ kbd {
 <p>Senior Machine Learning Engineer. November 2020 - Present</p>
 
 <ul>
-<li>Recommender systems and personalization for HBO Max</li>
+<li>Reponsible for scaling and innovation of recommender systems and personalization for HBO Max</li>
+<li>Scale personalization algorithms to tens of millions of users using Airflow, Docker, and Spark</li>
 <li>Increase user engagement of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a></li>
-<li>Apache Airflow, A/B Testing, algorithm innovation</li>
 </ul>
 
 <h4 id="toc_4">FindMine, New York, NY</h4>
