--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@ kbd {
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
 <li><a href="https://github.com/hacktuarial">Github</a></li>
+<li><a href="https://recsys.social/@hacktuarial">Mastodon</a></li>
 <li><a href="mailto:tsweetser@gmail.com">tsweetser@gmail.com</a></li>
 <li>(508) 450-1915</li>
 </ul>
