--- a/index.html
+++ b/index.html
@@ -337,21 +337,21 @@ kbd {
 <ul>
 <li><a href="https://www.linkedin.com/in/timothysweetser/">LinkedIn</a></li>
 <li><a href="https://github.com/hacktuarial">Github</a></li>
-<li><a href="https://recsys.social/@hacktuarial">Mastodon</a></li>
 <li><a href="mailto:tsweetser@gmail.com">tsweetser@gmail.com</a></li>
 <li>(508) 450-1915</li>
 </ul>
 
 <h2 id="toc_2">Experience</h2>
 
-<h4 id="toc_3">HBO Max, New York, NY</h4>
+<h4 id="toc_3">Warner Brothers Discovery, New York, NY</h4>
 
 <p>Senior Machine Learning Engineer. November 2020 - Present</p>
 
 <ul>
-<li>Reponsible for scaling and innovation of recommender systems and personalization for HBO Max</li>
+<li>Reponsible for scaling and innovation of recommender systems and personalization for Max and HBO Max</li>
 <li>Scale personalization algorithms to tens of millions of users using Airflow, Docker, and Spark</li>
-<li>Increase user engagement of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a></li>
+<li>Increase user engagement of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a> and XGBoost ensemble</li>
+<li>Move from offline to online scoring using custom Tensorflow Serving implementation</li>
 </ul>
 
 <h4 id="toc_4">FindMine, New York, NY</h4>
@@ -391,7 +391,7 @@ kbd {
 <h2 id="toc_8">Education</h2>
 
 <ul>
-<li>M.S. Statistics, <strong>Stanford University</strong>, 2015</li>
+<li>M.S. Statistics, Stanford University, 2015</li>
 <li>B.A. Mathematics, Clark University, Worcester, MA</li>
 </ul>
 
