drop 'talks' section

--- a/index.html
+++ b/index.html
@@ -399,22 +399,9 @@ kbd {
 <ul>
 <li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow, keras, Airflow, PySpark)</li>
 <li>Intermediate SQL</li>
-<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a> and Java</li>
+<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a>, Java, and Golang</li>
 <li>Proficient with git, docker, AWS (Sagemaker, EMR), GCP, and bash</li>
 </ul>
-
-<h2 id="toc_11">Talks</h2>
-
-<ul>
-<li>&quot;Diamond: Mixed Effects Models in Python&quot;, PyData NYC, November 2017
-
-<ul>
-<li><a href="https://www.youtube.com/watch?v=jrprjZEX9gU">video</a></li>
-<li><a href="https://www.slideshare.net/PyData/diamond-mixed-effects-models-in-python">slides</a></li>
-<li><a href="https://github.com/stitchfix/diamond">code</a></li>
-</ul></li>
-</ul>
-
 
 
 <script type="text/x-mathjax-config">
