--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@ kbd {
 
 <h4 id="toc_3">Warner Brothers Discovery, New York, NY</h4>
 
-<p>Senior Machine Learning Engineer. November 2020 - Present</p>
+<p>Staff Machine Learning Engineer. October 2023 - Present</p>
+<p>Senior Machine Learning Engineer. November 2020 - September 2023</p>
 
 <ul>
 <li>Reponsible for scaling and innovation of recommender systems and personalization for Max and HBO Max</li>
