--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@ kbd {
 <h2 id="toc_9">Programming Skills</h2>
 
 <ul>
-<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, asyncio, celery, tensorflow, keras, Airflow, PySpark)</li>
-<li>Intermediate SQL</li>
-<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a>, Java, and Golang</li>
-<li>Proficient with git, docker, AWS (Sagemaker, EMR), GCP, and bash</li>
+<li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, tensorflow, keras, Airflow, PySpark)</li>
+<li>Advanced SQL</li>
+<li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a> and Golang</li>
+<li>Proficient with git, docker, AWS (Sagemaker, EMR), and bash</li>
 </ul>
 
 
