--- a/index.html
+++ b/index.html
@@ -140,10 +140,18 @@ img {
 
 <h2 id="toc_2">Experience</h2>
 
+<h4 id="toc_3">StubHub, New York, NY</h4>
+
+<p>Machine Learning Engineer. April 2024 - Present</p>
+
+<ul>
+<li>Recommendations and personalization in Python and C#</li>
+</ul>
+
+
 <h4 id="toc_3">Warner Brothers Discovery, New York, NY</h4>
 
-<p>Staff Machine Learning Engineer. October 2023 - Present</p>
-<p>Senior Machine Learning Engineer. November 2020 - September 2023</p>
+<p>Machine Learning Engineer. November 2020 - March 2024</p>
 
 <ul>
 <li>Reponsible for scaling and innovation of recommender systems and personalization for Max and HBO Max</li>
@@ -199,6 +207,7 @@ img {
 <ul>
 <li>Advanced Python (numpy, scipy, pandas, scikit-learn, pytest, tensorflow, keras, Airflow, PySpark)</li>
 <li>Advanced SQL</li>
+<li>Intermediate C#</li>
 <li>Basic <a href="http://github.com/hacktuarial/sudoku">scala</a> and Golang</li>
 <li>Proficient with git, docker, AWS (Sagemaker, EMR), and bash</li>
 </ul>
