--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@ img {
 <li>Develop end-to-end data science pipelines in Spark, Python and R using AWS, Docker, and Jenkins</li>
 </ul>
 
+<h2 id="toc_8">Publications</h2>
+
+<ul>
+<li><a href="https://dl.acm.org/doi/10.1145/3640457.3688056"> (2024) Towards Understanding The Gaps of Offline And Online Evaluation Metrics: Impact of Series vs. Movie Recommendations</a></li>
+</ul>
+
 <h2 id="toc_8">Education</h2>
 
 <ul>
