drop year of graduation

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ img {
 <h2 id="toc_8">Education</h2>
 
 <ul>
-<li>M.S. Statistics, Stanford University, 2015</li>
+<li>M.S. Statistics, Stanford University</li>
 <li>B.A. Mathematics, Clark University, Worcester, MA</li>
 </ul>
 
