--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ img {
 
 <ul>
 <li>Recommendations and personalization in Python and C#</li>
+<li>Multi-armed bandits for display artwork optimization</li>
 </ul>
 
 
@@ -158,7 +159,6 @@ img {
 <li>Scale personalization algorithms to tens of millions of users using Airflow, Docker, and Spark</li>
 <li>Increase user engagement of personalized recommendations tray using <a href="https://arxiv.org/abs/1905.03375">EASE model</a> and XGBoost ensemble</li>
 <li>Move from offline to online scoring using custom Tensorflow Serving implementation</li>
-<li>Improve personalized recommendations using variational autoencoders (prototype) </li>
 </ul>
 
 <h4 id="toc_4">FindMine, New York, NY</h4>
