--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ img {
 <ul>
 <li>Recommendations and personalization in Python and C#</li>
 <li>Multi-armed bandits for display artwork optimization</li>
+<li>Improve observability, telemetry, and alerting</li>
 </ul>
 
 
